--- a/mistakes.tex
+++ b/mistakes.tex
@@ -29,7 +29,8 @@ V této práci se zaměřuji na ztráty způsobené chybami a hledám vzory v ni
 se zaměřuji na historii svých vlastních chyb, ze které lze pozorovat průběžný
 zisk zkušeností a vylepšení dovedností vedoucí k omezení chyb.
 
-Zdrojové kódy jsou dostupné v \href{TODO}{tomto repozitáři}.
+Zdrojové kódy jsou dostupné v
+\href{https://github.com/kulisak12/mistake-stats}{tomto repozitáři}.
 
 \section*{Data}
 
@@ -44,8 +45,9 @@ kontrolami, lze použít k analýze chyb. Pokud je závodníkův čas významně
 než čas ostatních závodníků, dá se předpokládat, že na postupu na danou kontrolu
 udělal chybu.
 
-Stažení dat z ORISu zajišťuje soubor \href{TODO}{oris.py}. Stažená data ukládá na disk,
-aby se omezil počet požadavků na API.
+Stažení dat z ORISu zajišťuje soubor
+\href{https://github.com/kulisak12/mistake-stats/blob/main/oris.py}{oris.py}.
+Stažená data ukládá na disk, aby se omezil počet požadavků na API.
 
 \subsection*{Zpracování}
 
@@ -91,12 +93,14 @@ Rozhodl jsem se zavést dvě třídy chyb:
     odpovídá ztrátě $36\,\rm s$, $105\,\rm s$, respektive $225\,\rm s$.
 \end{enumerate}
 
-Výše popsané zajišťuje soubor \href{TODO}{course.py}.
+Výše popsané zajišťuje soubor
+\href{https://github.com/kulisak12/mistake-stats/blob/main/course.py}{course.py}.
 
 \subsection*{Dataset}
 
 Využívám data ze všech závodů do konce srpna 2022, kterých jsem se kdy účastnil.
-Celkem se jedná o 83 závodů. O načtení se stará soubor \href{TODO}{dataset.py}.
+Celkem se jedná o 83 závodů. O načtení se stará soubor
+\href{https://github.com/kulisak12/mistake-stats/blob/main/dataset.py}{dataset.py}.
 
 V některých statistikách průměruji všechny závodníky dohromady, v některých
 uvažuji jen své výsledky.
