--- a/mistakes.tex
+++ b/mistakes.tex
@@ -87,10 +87,10 @@ uvažovat ztrátu v~poměru k~délce závodu.
 Rozhodl jsem se zavést dvě třídy chyb:
 \begin{enumerate}
     \item Malé chyby, u~kterých ztráta na postupu převyšuje $1/50$~délky závodu.
-    To by podle oficiálních směrných časů v~kategorii H21 znamenalo $14\,\rm s$
-    na sprintu, $42\,\rm s$ na krátké trati a~$90\,\rm s$ na klasické trati.
+          To by podle oficiálních směrných časů v~kategorii H21 znamenalo $14\,\rm s$
+          na sprintu, $42\,\rm s$ na krátké trati a~$90\,\rm s$ na klasické trati.
     \item Velké chyby, u~kterých ztráta převyšuje $1/20$~délky závodu, což
-    odpovídá ztrátě $36\,\rm s$, $105\,\rm s$, respektive $225\,\rm s$.
+          odpovídá ztrátě $36\,\rm s$, $105\,\rm s$, respektive $225\,\rm s$.
 \end{enumerate}
 
 Výše popsané zajišťuje soubor
@@ -124,7 +124,7 @@ statistika přibližně normální rozdělení, rozptyl odhadnu jako
 $p (1-p) (1/n + 1/m)$, kde $p$ je průměr všech hodnot $X$ a~$Y$.
 
 Pro malé chyby a~všechny závodníky vychází pro prvních pár kontrol následující
-pravděpodobnosti:
+pravděpodobnosti chyb:
 
 \begin{tabular}{c | c}
     Kontrola & Pravděpodobnost \\
@@ -141,5 +141,24 @@ použití testu výše vychází p-hodnota~0.00149, což by znamenalo, že bych 
 nulovou hypotézu zamítnout. To je zvláštní, z~pravděpodobností výše je vidět, že
 jsou výsledky dost zašuměné.
 
+Problém je v~tom, že data nejsou nezávislá. Je-li jedna z~kontrol na trati
+těžká, nejspíše na ní udělá chybu velká část závodníků běžící daný závod. Test
+tedy pozměním, veličina~$X$ bude označovat procento závodníků, kteří v~daném
+závodě udělali chybu na první kontrole. $Y$~zavedu analogicky. Tím bych měl
+zajistit nezávislost veličin.
+
+Provedu t-test s~alternativní hypotézou, že $X$~je větší než~$Y$. Výsledky:
+
+\begin{tabular}{r | l | l | l}
+     & $\overline{X}_n$ & $\overline{Y}_m$ & p-value  \\
+    \hline
+    Malé chyby, všichni závodníci  & 0.10648 & 0.07984 & 0.02354  \\
+    Velké chyby, všichni závodníci & 0.03532 & 0.01881 & 0.00407  \\
+    Malé chyby, pouze já           & 0.20000 & 0.08579 & 0.00046  \\
+    Velké chyby, pouze já          & 0.12000 & 0.02439 & 0.000001 \\
+\end{tabular}
+
+S~výjimkou prvního případu lze nulovou hypotézu vyvrátit. Zdá se tedy, že na
+první kontrole opravdu nastávají chyby častěji.
 
 \end{document}
