Reword and change to lowercase

--- a/mistakes.tex
+++ b/mistakes.tex
@@ -152,13 +152,14 @@ Provedu t-test s~alternativní hypotézou, že $X$~je větší než~$Y$. Výsled
 \begin{tabular}{r | l | l | l}
      & $\overline{X}_n$ & $\overline{Y}_m$ & p-value  \\
     \hline
-    Malé chyby, všichni závodníci  & 0.10648 & 0.07984 & 0.02354  \\
-    Velké chyby, všichni závodníci & 0.03532 & 0.01881 & 0.00407  \\
-    Malé chyby, pouze já           & 0.20000 & 0.08579 & 0.00046  \\
-    Velké chyby, pouze já          & 0.12000 & 0.02439 & 0.000001 \\
+    malé chyby, všichni závodníci  & 0.10648 & 0.07984 & 0.02354  \\
+    velké chyby, všichni závodníci & 0.03532 & 0.01881 & 0.00407  \\
+    malé chyby, pouze já           & 0.20000 & 0.08579 & 0.00046  \\
+    velké chyby, pouze já          & 0.12000 & 0.02439 & 0.000001 \\
 \end{tabular}
 
 S~výjimkou prvního případu lze nulovou hypotézu vyvrátit. Zdá se tedy, že na
-první kontrole opravdu nastávají chyby častěji.
+první kontrole opravdu nastávají chyby častěji. Já zejména bych si dle výsledků
+měl na první kontrolu dávat obzvlášť pozor.
 
 \end{document}
