--- a/mistakes.tex
+++ b/mistakes.tex
@@ -11,6 +11,7 @@
 
 \setlength{\parskip}{0.5em}
 \setlength{\parindent}{0em}
+\hypersetup{colorlinks=true}
 
 \title{\Huge Chyby v~orientačním běhu}
 \author{David Klement}
