Reword reason for competitor limit

--- a/mistakes.tex
+++ b/mistakes.tex
@@ -56,8 +56,8 @@ nemuseli dokončit, případně některou kontrolu mohli vynechat. Poté nejsou
 dostupné informace o~času, který strávili postupem na danou a~následující
 kontrolu. Pro jednoduchost tyto závodníky z~dat plně odstraňuji.
 
-Do dat přidávám pouze ty závody, které dokončili alespoň 3~závodníci. Pro
-2~závodníky totiž nelze rozlišit přirozený rozptyl časů od chyb.
+Do dat přidávám pouze ty závody, které dokončili alespoň 3~závodníci, abych
+omezil rozptyl hodnot.
 
 \subsection*{Detekce chyb}
 
